...
    <string name="title_login_facebook">login with facebook</string>

    <string name="invalid_email_error">Invalid email address</string>
    <string name="error_field_required">Required field</string>
    <string name="error_field_invalid">Invalid value</string>
    <string name="empty_password_error">The password cannot be empty</string>
    <string name="password_match_error">The passwords do not match</string>
    <string name="generic_auth_error">Could not authenticate. Unknown error.</string>
    <string name="help_text_activity_event_picking">Please select an event to continue</string>
    <string name="help_text_go_join_events">Please go explore and join an event to continue !</string>
    <string name="joined_help_text_activity_event_picking">Events you joined:</string>
    <string name="not_joined_help_text_activity_event_picking">Click here to go explore events !</string>
    <string name="double_back_press_to_exit">Press once again to exit</string>
...
