<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="ch.epfl.sweng.eventmanager.ui.event.interaction.fragments.NewsFragment"
        android:layout_marginTop="?attr/actionBarSize">

    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/feedback_relative_layout">
        <androidx.recyclerview.widget.RecyclerView android:layout_width="match_parent"
                                                   android:layout_height="220dp"
                                                   android:id="@+id/feedback_recycler_view"
                                                   android:layout_alignParentStart="true"
                                                   android:layout_alignParentBottom="true"
                                                   android:layout_alignParentLeft="true">
        </androidx.recyclerview.widget.RecyclerView>
    </RelativeLayout>
    <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/feedback_form_ratingBar"
            android:numStars="5"
            android:stepSize="0.25"/>

    <EditText
            android:id="@+id/feedback_form_content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="top"
            android:hint="@string/contact_form_hint_message"
            android:inputType="textMultiLine"
            android:layout_weight="70"/>

    <Button
            android:id="@+id/feedback_form_send_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/contact_form_send_button_text"
            android:layout_weight="10"
            style="@style/Button_global"/>


</LinearLayout>
