...
                       style="@style/Widget.AppCompat.RatingBar.Small"
                       android:id="@+id/item_feedback_rating"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/item_feedback_date"
            />

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:id="@+id/item_feedback_description"
            >
...
